--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "description": "Code samples for the book Node.js Design Patterns, 4th Edition by Mario Casciaro and Luciano Mammino",
   "scripts": {
     "test": "pnpm run test:lint",
-    "test:lint": "biome check --organize-imports-enabled=true --no-errors-on-unmatched",
-    "test:lint-fix": "biome check --organize-imports-enabled=true --fix",
+    "test:lint": "biome check --no-errors-on-unmatched",
+    "test:lint-fix": "biome check --fix",
     "prepare": "husky"
   },
-  "keywords": ["node.js", "design patterns", "book", "code samples"],
+  "keywords": [
+    "node.js",
+    "design patterns",
+    "book",
+    "code samples"
+  ],
   "author": "Luciano Mammino and Mario Casciaro",
   "license": "MIT",
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
+  "packageManager": "pnpm@10.18.0",
   "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "@types/node": "^24.3.2",
+    "@biomejs/biome": "2.2.5",
+    "@types/node": "^24.6.2",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.6"
+    "lint-staged": "^16.2.3"
   },
   "lint-staged": {
-    "*": ["pnpm run test:lint"]
+    "*": [
+      "pnpm run test:lint"
+    ]
   },
   "dependencies": {
     "mkdirp": "^3.0.1"
