--- a/07-creational-design-patterns/10-dependency-injection/package.json
+++ b/07-creational-design-patterns/10-dependency-injection/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tar-fs": "^3.1.1"
   }
 }
