--- a/07-creational-design-patterns/06b-builder-in-the-wild/package.json
+++ b/07-creational-design-patterns/06b-builder-in-the-wild/package.json
@@ -12,7 +12,7 @@
   "author": "Luciano Mammino and Mario Casciaro",
   "license": "MIT",
   "dependencies": {
-    "commander": "14.0.0",
-    "superagent": "^10.1.1"
+    "commander": "^14.0.2",
+    "superagent": "^10.3.0"
   }
 }
