--- a/13-messaging-and-integration-patterns/07-task-distribution-amqp/package.json
+++ b/13-messaging-and-integration-patterns/07-task-distribution-amqp/package.json
@@ -12,7 +12,7 @@
   "author": "Luciano Mammino and Mario Casciaro",
   "license": "MIT",
   "dependencies": {
-    "indexed-string-variation": "^2.1.0",
-    "amqplib": "^0.10.8"
+    "amqplib": "^0.10.9",
+    "indexed-string-variation": "^2.1.0"
   }
 }
