--- a/13-messaging-and-integration-patterns/10-return-address/package.json
+++ b/13-messaging-and-integration-patterns/10-return-address/package.json
@@ -12,7 +12,7 @@
   "author": "Luciano Mammino and Mario Casciaro",
   "license": "MIT",
   "dependencies": {
-    "nanoid": "^5.1.5",
-    "amqplib": "^0.10.8"
+    "amqplib": "^0.10.9",
+    "nanoid": "^5.1.6"
   }
 }
