--- a/07-creational-design-patterns/09-singleton-dependencies/package.json
+++ b/07-creational-design-patterns/09-singleton-dependencies/package.json
@@ -11,8 +11,5 @@
   "keywords": [],
   "author": "Luciano Mammino and Mario Casciaro",
   "license": "MIT",
-  "dependencies": {
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
-  }
+  "dependencies": {}
 }
